# ONCOJ_Processing

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
compreditor/: .gitignore  README.md  __init__.py  app.py  config.py
compreditor/routes/: __init__.py  dictionary.py  documents.py  search.py
compreditor/services/: __init__.py  dictionary_service.py  editor.py  repository.py  search_service.py  validation.py  xml_tools.py
compreditor/static/: app.css
compreditor/templates/: index.html
compreditor/tests/: test_compreditor.py
data/dict/: dictionary.txt
data/text/: EN_01.txt  EN_02.txt  EN_03.txt  EN_04.txt  EN_05.txt  EN_06.txt  EN_07.txt  EN_08.txt  EN_09.txt  EN_10.txt  EN_12.txt  EN_13.txt  EN_14.txt  (+75 more)
editor/: app.py
notebooks/: compound_lemma_processor.ipynb  lemmas_processor.ipynb  mk_lemma_processor.ipynb  oncoj_usage.ipynb  visualisation.ipynb
outputs/: oncoj_editor_workbench_model_v2.html  oncoj_editor_workbench_model_v3.html  oncoj_editor_workbench_model_v4.html  oncoj_editor_workbench_model_v5.html  oncoj_editor_workbench_prototype.html
scripteditor/: README.md  app.py  compound_lemma_forgui.py  lemma_forgui.py  mk_lemma_forgui.py  worker.py
scripts/: compound_lemma_processor.py  compound_lemma_processor_1.0.1.py  compound_lemma_processor_standalone.py  lemmas_processor.py  lemmas_processor_2.0.4.py  mk_lemma_processor.py  mk_lemma_processor_1.0.1.py  mk_lemma_processor_1.py  mk_lemma_processor_standalone.py
tests/: conftest.py  test_corpus.py  test_dictionary.py  test_export.py  test_kana.py  test_lemma_id.py  test_tags.py
(+320 files in other folders)
