[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coj"
version = "0.1.0"
description = "Data model and processing tools for the Oxford-NINJAL Corpus of Old Japanese"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]
server = ["flask"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    # E402: scripts must sys.path.insert before importing src/oncoj
    "E402",
    # E741: ambiguous variable names — handled per-file where meaningful
    "E741",
    # E501: long lines acceptable in docstrings, data tables, test literals
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# notebooks use intentional inline if/return style for alignment
"notebooks/*.ipynb" = ["E701"]
# tags.py has a deferred import that must stay below module-level constants
"src/coj/tags.py" = ["E402"]
